# bare-metal-manager-core

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  Makefile-package.toml  Makefile.toml  devspace.yaml
.github/workflows/: build-boot-artifacts.yml  ci.yaml  rest-build-push-service.yml  rest-ci.yml  rest-helm-workflows.yml  rest-lint-and-test.yml  rest-prepare-build-info.yml
bluefield/otel/: otel_config.yaml
crates/admin-cli/: AGENTS.md  Cargo.toml  DEVELOPMENT.md  cli_domains.yaml
crates/api/: Cargo.toml  casbin-policy.csv
crates/api-core/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-model/: Cargo.toml
crates/api-web/: Cargo.toml
crates/api/src/: api.rs  dpf_services.rs  ethernet_virtualization.rs  lib.rs  listener.rs  logging.rs  main.rs  metrics.rs  run.rs  setup.rs
crates/api/src/auth/: internal_rbac_rules.rs
crates/api/src/cfg/: README.md  file.rs
crates/api/src/dhcp/: discover.rs
crates/api/src/handlers/: attestation.rs  bmc_endpoint_explorer.rs  component_manager.rs  dpu.rs  dpu_remediation.rs  instance.rs  machine.rs  machine_interface.rs  machine_scout.rs  nmxc_browse.rs  rack.rs  redfish.rs  resource_pool.rs  tenant_identity_config.rs  uefi.rs
crates/api/src/ib_fabric_monitor/: mod.rs
crates/api/src/machine_update_manager/: dpu_nic_firmware.rs  host_firmware.rs
crates/api/src/measured_boot/: mod.rs
crates/api/src/measured_boot/rpc/: bundle.rs  machine.rs  report.rs  site.rs
crates/api/src/measured_boot/tests/: rpc.rs
crates/api/src/nvl_partition_monitor/: mod.rs
crates/api/src/preingestion_manager/: mod.rs
crates/api/src/rack/: mod.rs
crates/api/src/site_explorer/: bmc_endpoint_explorer.rs  mod.rs  redfish.rs
crates/api/src/state_controller/: common_services.rs  controller.rs  external_service_error.rs  mod.rs
crates/api/src/state_controller/controller/: builder.rs  periodic_enqueuer.rs  processor.rs
crates/api/src/state_controller/machine/: handler.rs  io.rs  metrics.rs
crates/api/src/state_controller/machine/handler/: attestation.rs
crates/api/src/state_controller/power_shelf/: configuring.rs  context.rs  deleting.rs  error_state.rs  fetching_data.rs  handler.rs  initializing.rs  io.rs  maintenance.rs  metrics.rs  ready.rs
crates/api/src/state_controller/rack/: config.rs  context.rs  created.rs  deleting.rs  discovering.rs  error_state.rs  fabric_manager.rs  handler.rs  io.rs  maintenance.rs  metrics.rs  mod.rs  ready.rs  validating.rs
crates/api/src/state_controller/switch/: reprovisioning.rs
crates/api/src/tests/: dpu_machine_update.rs  dpu_remediation.rs  dpu_reprovisioning.rs  expected_machine.rs  host_bmc_firmware_test.rs  instance.rs  instance_allocate.rs  instance_config_update.rs  instance_os.rs  ipxe.rs  machine_dhcp.rs  machine_health.rs  machine_network.rs  machine_states.rs  rack_health.rs  resource_pool.rs  site_explorer.rs  sku.rs  state_controller.rs  vpc.rs
crates/api/src/tests/common/api_fixtures/: instance.rs  mod.rs  site_explorer.rs
crates/api/src/tests/power_shelf_state_controller/: error_state.rs  maintenance.rs  mod.rs
crates/api/src/tests/rack_state_controller/: handler.rs  mod.rs
crates/api/src/tests/switch_state_controller/: mod.rs
crates/api/src/tests/web/: managed_host.rs
crates/api/src/web/: attestation.rs  instance.rs
crates/api/templates/: index.html
crates/bmc-explorer/: Cargo.toml
crates/bmc-mock/: Cargo.toml
crates/bmc-proxy/: Cargo.toml  README.md
crates/component-manager/: Cargo.toml
crates/credential-rotation/: Cargo.toml
crates/credential-rotation/src/: lib.rs
crates/dpf/: Makefile.toml
crates/dpu-remediation/: Cargo.toml
crates/firmware/: README.md
crates/health/: Cargo.toml  build.rs
crates/health-metrics/: Cargo.toml
crates/health-metrics/src/: lib.rs
crates/ib-fabric/: Cargo.toml
crates/machine-a-tron/: Cargo.toml  Dockerfile
crates/measured-boot/: Cargo.toml
crates/measured-boot/src/: bundle.rs  journal.rs  lib.rs  machine.rs  pcr.rs  profile.rs  records.rs  report.rs  site.rs
crates/network-segment-controller/: Cargo.toml
crates/nvlink-manager/: Cargo.toml
crates/preingestion-manager/: Cargo.toml
crates/pxe/: Cargo.toml
crates/rack-controller/: Cargo.toml
crates/redfish/: Cargo.toml
crates/rpc/: Cargo.toml  build.rs
crates/spdm-controller/: Cargo.toml
crates/spdm-controller/src/: context.rs  handler.rs  io.rs  lib.rs  metrics.rs
crates/switch-controller/: Cargo.toml
crates/switch-controller/src/: bom_validating.rs  certificate.rs  configuring.rs  context.rs  created.rs  deleting.rs  endpoint.rs  error_state.rs  fetch_info.rs  handler.rs  initializing.rs  io.rs  lib.rs  maintenance.rs  metrics.rs  ready.rs  reprovisioning.rs  validating.rs
crates/tls/: Cargo.toml
crates/utils/: Cargo.toml
crates/xtask/: Cargo.toml
dev/docker/: Dockerfile.build-container-aarch64  Dockerfile.build-container-x86_64
docs/: index.yml
docs/architecture/: health_aggregation.md
docs/configuration/: machine_identity.md  tenant_management.md
docs/development/: machine-a-tron-deployment.md  machine-a-tron-scale-testing.md
docs/getting-started/: quick-start.md
docs/manuals/: dpf.md  dpu_extension_service.md  ingesting_machines.md  machine_identity_kek_rotation.md  machine_identity_signing_key_rotation.md  machine_identity_verification.md
docs/observability/: core_metrics.md
docs/operations/: firmware-updates.md  monitoring-health.md  nico-mcp.md
docs/provisioning/: boot-interfaces-and-dpu-modes.md
fern/: generators.yml
helm/: Chart.yaml  values.yaml
helm-prereqs/: README.md  cleanup-machine-a-tron.sh  health-check.sh  preflight.sh  setup-machine-a-tron.sh  setup.sh  values.yaml
helm-prereqs/templates/: vault-config-job.yaml
helm-prereqs/values/: machine-a-tron-multipod.yaml  machine-a-tron-scale.yaml  machine-a-tron.yaml
helm/templates/: NOTES.txt
pxe/: Makefile.toml
pxe/common_files/: check-scout-updates.sh  disk_imaging.sh  scout-loader-rclocal
pxe/templates/: network-config  user-data
rest-api/: .revive.toml  Makefile  go.mod  go.sum
scripts/: check-repo-clean.sh
(+1778 files in other folders)
