#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-credential-rotation"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_credential_rotation"

[dependencies]
carbide-api-db = { path = "../api-db", default-features = false }
carbide-redfish = { path = "../redfish", default-features = false }
carbide-secrets = { path = "../secrets" }

async-trait = { workspace = true }
chrono = { workspace = true }
libredfish = { workspace = true }
mac_address = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
carbide-redfish = { path = "../redfish", features = ["test-support"] }
carbide-secrets = { path = "../secrets", features = ["test-support"] }
carbide-macros = { path = "../macros" }
carbide-sqlx-testing = { path = "../sqlx-testing" }

serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
