#
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[package]
name = "carbide-measured-boot"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "measured_boot"

[features]
sqlx = ["dep:sqlx", "carbide-uuid/sqlx"]
cli = ["dep:prettytable-rs", "dep:eyre", "dep:clap"]

[dependencies]
# workspace dependencies
carbide-uuid = { path = "../uuid" }

thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }
prettytable-rs = { optional = true, workspace = true }
clap = { workspace = true, optional = true }
eyre = { optional = true, workspace = true }
serde = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[lints]
workspace = true
